@@ -15,7 +15,7 @@
     <em:targetApplication>
       <Description>
         <em:id>{ec8030f7-c20a-464f-9b0e-13a3a9e97384}</em:id>
-        <em:minVersion>3.5.*</em:minVersion>
+        <em:minVersion>3.5</em:minVersion>
         <em:maxVersion>3.6.*</em:maxVersion>
       </Description>
     </em:targetApplication>
